# latency-aware-kubernetes

./: .gitignore  Deployment.yaml  Gateway.yaml  HTTPRoute.yaml  Makefile  Makefile.old  README.md  flake.nix  payload.json  skaffold.yaml
analysis/: .gitignore  TEMPLATE_TABEL_PARAMETER_EVALUASI.xlsx  chart_visualization.py  fill_evaluation_table.py  pyproject.toml  viz.py
docs/: diagram_virtualization.drawio  metodologi_penelitian.drawio  metodologi_penelitian.mermaid  nftables_flow.drawio  nftables_reconciler.drawio  prober_chain_reconciliation.mermaid  sequence_diagram.mermaid  sequence_diagram_v0.1.mermaid  sequence_diagram_v0.2.mermaid  system_architecture.drawio  system_architecture.v2.drawio
docs/ieee/: flake.nix
extender/: .gitignore  Cargo.toml  Dockerfile  README.md  dummy_probes.json  local_node.json
extender/src/: kube_client.rs  main.rs  models.rs  state.rs
extender/src/handlers/: filter.rs  mod.rs  prioritize.rs
hellopod/: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  flake.nix
hellopod/src/: main.rs
hellopod/static/: .dockerignore  Dockerfile  go.mod  go.sum  index.html  main.go
hellopod/wasm/: Cargo.toml  package-lock.json
k8s/: Cilium.yaml  Cluster.yaml  ClusterRole.yaml  ClusterRoleBinding.yaml  CronJob.yaml  Deployment.yaml  Extender-scheduler.yaml  Extender.yaml  Hellopod.yaml  HellopodStatic.yaml  HttpRater.yaml  IPAddressPool.yaml  Job.yaml  L2Advertisement.yaml  Latency-aware-scheduler.yaml  Namespace.yaml  Nginx.yaml  NodeExporter.yaml  Prober.yaml  Proberv2.yaml  Prometheus.yaml  Scheduler.yaml  SchedulerSecret.yaml.example  Secret.yaml  Secret.yaml.example  SecretProberv2.yaml.example  Service.yaml  ServiceAccount.yaml  Traefik.yaml  demo-ingress.yaml  nodes.json.example  setup-nodes.sh  traefik-values.yaml
k8s/chart-values/: cilium.kind.yaml  cilium.yaml  cillium.yaml  metallb.yaml  traefik.yaml  (+2 more)
ningd/: .dockerignore  Cargo.toml  Dockerfile
node-scorer/: Dockerfile  README.md  node-scorer.py  node-scorer.yaml
prober/: .dockerignore  Cargo.toml  Dockerfile  FEATURES.md  Makefile  build.rs  compose.dev.yaml  flake.nix
prober/protobuf/: message.proto
prober/src/: balancer.rs  cilium.rs  cpu_watcher.rs  latency_prober.rs  lib.rs  main.rs  nftables_balancer.rs  nftables_reconciler.rs  nftables_watcher.rs  ping.rs  probe.rs
proberv2/: Cargo.toml  Dockerfile  config.json.example
proberv2/.dev/: flake.nix
proberv2/docs/: SAMPLE.md
proberv2/src/: actor.rs  config.rs  cpu_usage_probe.rs  endpoints_watch.rs  latency_probe.rs  lib.rs  main.rs  metrics.rs  node_watch.rs  setup_nftables.rs  update_nftables.rs
protobuf/: message.proto
rap-proxy/: Dockerfile  README.md  app.py  rap-proxy.yaml
scheduler/: .env  .env.example  Dockerfile  dummy.go  go.mod  go.sum
schedulerv1/: go.mod  go.sum
score-aggregator/: Dockerfile  README.md  aggregator.py  aggregator.yaml
traffic/: concentrated_test.js  distributed_test.js  generation_script.js  load_test.js  run.sh  script.js  single.js  single.sh  soak_test.js  soak_test_busy.js  spread.js  stress_test.js  targets.json.example  test_script.js
(+59 files in other folders)
