[package]
name = "extender"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
k8s-openapi = { version = "0.23.0", features = ["v1_30"] } 
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
urlencoding = "2.1"
kube = { version = "0.96", features = ["runtime", "client", "derive"] }
prometheus = "0.13"
