[package]
name = "prober"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.1"
rumqttc = "0.24.0"
prost = "0.14"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
kube = { version = "1.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"

[build-dependencies]
prost-build = "0.14.1"
