[package]
name = "proberv2"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", features = ["latest", "schemars"] }
schemars = { version = "1" }
tokio = { version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.100"
futures = "0.3"
prometheus-http-query = "0.8.3"
nftables = "0.6.3"
serde = "1.0.228"
serde_json = "1.0.145"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-util = "0.7.17"
